--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ button {
     background: white;
     color: #3b0000;
     position: relative;
+    transition: transform 0.3s ease;
 }
 
 .popup {
